# shop-buddy

./: README.md  index.html  pyproject.toml
src/: main.py  private_keys.json
src/agents/: customer.py  store.py
src/messages/: customer.py  store.py
