[tool.poetry]
name = "hack-ai"
version = "0.1.0"
description = "Hack_ai IIT-B Tech Fest 2023"
authors = ["Vivek-raj-gupta-2002 <vivekrajgupta2002@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
uagents = "^0.9.2"
python = ">=3.10,<3.12"
openai = "1.6.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
